backend/kubernetes/core-engine-backend.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-engine-backend-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  ingressClassName: nginx
  rules:
    - host: flow-finder-dev-core-engine.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-engine-backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - flow-finder-dev-core-engine.kube-ext.isc.heia-fr.ch
