backend/kubernetes/glitchtip.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glitchtip-ingress
spec:
  ingressClassName: nginx-ext
  rules:
    - host: flow-finder-dev-monitor-swiss-ai-center.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - backend:
              service:
                name: glitchtip
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flow-finder-dev-monitor-swiss-ai-center.kube-ext.isc.heia-fr.ch
