backend/kubernetes/minio.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-ext
  rules:
  - host: flow-finder-dev-minio-swiss-ai-center.kube-ext.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
  - host: flow-finder-dev-console-minio-swiss-ai-center.kube-ext.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
  tls:
    - hosts:
        - flow-finder-dev-console-minio-swiss-ai-center.kube-ext.isc.heia-fr.ch
        - flow-finder-dev-minio-swiss-ai-center.kube-ext.isc.heia-fr.ch
